--- a/GameEngine.csproj
+++ b/GameEngine.csproj
@@ -47,7 +47,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Engine\Audio\Sound.cs" />
-    <Compile Include="Engine\Components\InputService.cs" />
     <Compile Include="Engine\Components\KeyboardControllerComponent.cs" />
     <Compile Include="Engine\Components\TransformComponent.cs" />
     <Compile Include="Engine\Components\IUpdateable.cs" />
@@ -55,7 +54,7 @@
     <Compile Include="Engine\Content\Data\AssetEntry.cs" />
     <Compile Include="Engine\Content\Data\FilesystemProvider.cs" />
     <Compile Include="Engine\Content\Data\IContentProvider.cs" />
-    <Compile Include="Engine\Content\Data\Pipeline.Data.cs" />
+    <Compile Include="Engine\Content\Data\PriorityComparer.cs" />
     <Compile Include="Engine\Content\Data\ProviderCollection.cs" />
     <Compile Include="Engine\Content\Data\ProviderFactory.cs" />
     <Compile Include="Engine\Content\Data\ProviderType.cs" />
@@ -64,9 +63,13 @@
     <Compile Include="Engine\Content\Pipeline\CompositeResource.cs" />
     <Compile Include="Engine\Content\Pipeline\GdiTextureLoader.cs" />
     <Compile Include="Engine\Content\Pipeline\ResourceLoader.cs" />
+    <Compile Include="Engine\Graphics\Animation\SimpleAnimationController.cs" />
     <Compile Include="Engine\Graphics\Animation\AnimationComponent.cs" />
     <Compile Include="Engine\Graphics\Animation\AnimationData.cs" />
+    <Compile Include="Engine\Graphics\Animation\BlendAnimationController.cs" />
     <Compile Include="Engine\Graphics\Animation\Bone.cs" />
+    <Compile Include="Engine\Graphics\Animation\LinearSequence.cs" />
+    <Compile Include="Engine\Graphics\Animation\Sequence.cs" />
     <Compile Include="Engine\Graphics\Buffers\Buffer.cs" />
     <Compile Include="Engine\Graphics\Buffers\BufferManager.cs" />
     <Compile Include="Engine\Graphics\Buffers\Framebuffer.cs" />
@@ -88,6 +91,11 @@
     <Compile Include="Engine\Graphics\Shader.cs" />
     <Compile Include="Engine\Graphics\ShaderFactory.cs" />
     <Compile Include="Engine\Graphics\State.cs" />
+    <Compile Include="Engine\Physics\CharacterController.cs" />
+    <Compile Include="Engine\Physics\MotionComponent.cs" />
+    <Compile Include="Engine\Physics\PhysicsComponent.cs" />
+    <Compile Include="Engine\Physics\PhysicsData.cs" />
+    <Compile Include="Engine\Physics\PhysicsService.cs" />
     <Compile Include="Engine\Scenegraph\AnimationNode.cs" />
     <Compile Include="Engine\Scenegraph\BufferBatchNode.cs" />
     <Compile Include="Engine\Scenegraph\Camera.cs" />
@@ -104,8 +112,11 @@
     <Compile Include="Engine\Scenery\Map.cs" />
     <Compile Include="Engine\Scenery\MapBuilder.cs" />
     <Compile Include="Engine\Scenery\Parameter.cs" />
-    <Compile Include="Engine\Scripting\LuaComponent.cs" />
     <Compile Include="Engine\EngineException.cs" />
+    <Compile Include="Engine\Scripting\HealthComponent.cs" />
+    <Compile Include="Engine\Scripting\LuaComponent.cs" />
+    <Compile Include="Engine\Scripting\LuaStorageComponent.cs" />
+    <Compile Include="Engine\Scripting\LuaService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities\GLConfig.cs" />
     <Compile Include="Utilities\Logging\Log.cs" />
@@ -117,10 +128,12 @@
       <Project>{aa03ef1a-94f7-4d30-ab14-2092863ff923}</Project>
       <Name>Jitter</Name>
     </ProjectReference>
+    <ProjectReference Include="..\LuaSharp\LuaSharp.csproj">
+      <Project>{C651A291-775F-46D6-A2D8-BEF573F97D1E}</Project>
+      <Name>LuaSharp</Name>
+    </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Engine\Physics\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
