--- a/GameEngine.csproj
+++ b/GameEngine.csproj
@@ -72,7 +72,9 @@
   <ItemGroup>
     <Compile Include="Engine\Audio\Sound.cs" />
     <Compile Include="Engine\Components\CameraComponent.cs" />
+    <Compile Include="Engine\Physics\CrateComponent.cs" />
     <Compile Include="Engine\Components\KeyboardControllerComponent.cs" />
+    <Compile Include="Engine\Physics\SensorComponent.cs" />
     <Compile Include="Engine\Components\TransformComponent.cs" />
     <Compile Include="Engine\Components\IUpdateable.cs" />
     <Compile Include="Engine\Content\ContentManager.cs" />
