--- a/GameEngine.csproj
+++ b/GameEngine.csproj
@@ -72,6 +72,7 @@
   <ItemGroup>
     <Compile Include="Engine\Audio\Sound.cs" />
     <Compile Include="Engine\Components\CameraComponent.cs" />
+    <Compile Include="Engine\Components\IService.cs" />
     <Compile Include="Engine\Physics\CrateComponent.cs" />
     <Compile Include="Engine\Components\KeyboardControllerComponent.cs" />
     <Compile Include="Engine\Physics\TargetConstraint.cs" />
