--- a/GameEngine.csproj
+++ b/GameEngine.csproj
@@ -72,6 +72,7 @@
   <ItemGroup>
     <Compile Include="Engine\Audio\Sound.cs" />
     <Compile Include="Engine\Components\CameraComponent.cs" />
+    <Compile Include="Engine\Components\EntityFactory.cs" />
     <Compile Include="Engine\Components\ISaveable.cs" />
     <Compile Include="Engine\Components\IService.cs" />
     <Compile Include="Engine\Components\StateService.cs" />
@@ -141,11 +142,10 @@
     <Compile Include="Engine\Scenegraph\TransformNode.cs" />
     <Compile Include="Engine\Scenegraph\VBONode.cs" />
     <Compile Include="Engine\Scenery\AssetReference.cs" />
-    <Compile Include="Engine\Scenery\ComponentDefinition.cs" />
     <Compile Include="Engine\Scenery\EntityDefinition.cs" />
+    <Compile Include="Engine\Scenery\EntityInstance.cs" />
     <Compile Include="Engine\Scenery\Map.cs" />
     <Compile Include="Engine\Scenery\MapBuilder.cs" />
-    <Compile Include="Engine\Scenery\Parameter.cs" />
     <Compile Include="Engine\EngineException.cs" />
     <Compile Include="Engine\Scripting\PlayerStateComponent.cs" />
     <Compile Include="Engine\Scripting\HealthComponent.cs" />
