--- a/GameEngine.csproj
+++ b/GameEngine.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Engine\Graphics\RenderComponent.cs" />
     <Compile Include="Engine\Physics\CrateComponent.cs" />
     <Compile Include="Engine\Components\KeyboardControllerComponent.cs" />
+    <Compile Include="Engine\Physics\ProjectileComponent.cs" />
     <Compile Include="Engine\Physics\TargetConstraint.cs" />
     <Compile Include="Engine\Physics\SensorComponent.cs" />
     <Compile Include="Engine\Components\TransformComponent.cs" />
