--- a/GameEngine.csproj
+++ b/GameEngine.csproj
@@ -72,7 +72,7 @@
   <ItemGroup>
     <Compile Include="Engine\Audio\Sound.cs" />
     <Compile Include="Engine\Components\CameraComponent.cs" />
-    <Compile Include="Engine\Components\EntityFactory.cs" />
+    <Compile Include="Engine\Scenery\EntityFactory.cs" />
     <Compile Include="Engine\Components\ISaveable.cs" />
     <Compile Include="Engine\Components\IService.cs" />
     <Compile Include="Engine\Components\StateService.cs" />
@@ -146,9 +146,9 @@
     <Compile Include="Engine\Scenery\EntityDefinition.cs" />
     <Compile Include="Engine\Scenery\EntityInstance.cs" />
     <Compile Include="Engine\Scenery\Map.cs" />
-    <Compile Include="Engine\Scenery\MapBuilder.cs" />
     <Compile Include="Engine\EngineException.cs" />
-    <Compile Include="Engine\Scenery\ResourceFactory.cs" />
+    <Compile Include="Engine\Content\ResourceFactory.cs" />
+    <Compile Include="Engine\Scenery\MapBuilder.cs" />
     <Compile Include="Engine\Scripting\PlayerStateComponent.cs" />
     <Compile Include="Engine\Scripting\HealthComponent.cs" />
     <Compile Include="Engine\Scripting\LuaComponent.cs" />
