--- a/GameEngine.csproj
+++ b/GameEngine.csproj
@@ -70,6 +70,14 @@
   <ItemGroup>
     <Compile Include="Engine\Audio\Sound.cs" />
     <Compile Include="Engine\Graphics\SkinnedVertex.cs" />
+    <Compile Include="Engine\Particles\Emitters\LineEmitter.cs" />
+    <Compile Include="Engine\Particles\Emitters\PointEmitter.cs" />
+    <Compile Include="Engine\Particles\IBehavior.cs" />
+    <Compile Include="Engine\Particles\IEmitter.cs" />
+    <Compile Include="Engine\Particles\IRenderer.cs" />
+    <Compile Include="Engine\Particles\Particle.cs" />
+    <Compile Include="Engine\Particles\ParticleManager.cs" />
+    <Compile Include="Engine\Particles\ParticlePool.cs" />
     <Compile Include="Engine\Primitives\ScalableTransform.cs" />
     <Compile Include="Engine\Primitives\Transform.cs" />
     <Compile Include="Engine\Primitives\TransformComponent.cs" />
@@ -148,6 +156,15 @@
     <Compile Include="Engine\Scenery\MapBuilder.cs" />
     <Compile Include="Engine\Scripting\HealthComponent.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UI\Canvas.cs" />
+    <Compile Include="UI\Controls\Bar.cs" />
+    <Compile Include="UI\Controls\Button.cs" />
+    <Compile Include="UI\Controls\Frame.cs" />
+    <Compile Include="UI\IRenderer.cs" />
+    <Compile Include="UI\Key.cs" />
+    <Compile Include="UI\Layouts\GridLayout.cs" />
+    <Compile Include="UI\Padding.cs" />
+    <Compile Include="UI\UIElement.cs" />
     <Compile Include="Utilities\GLConfig.cs" />
     <Compile Include="Utilities\Logging\Log.cs" />
     <Compile Include="Utilities\MathUtils.cs" />
